@@ -47,9 +47,10 @@ from openquake.baselib.python3compat import decode
 from openquake.baselib import parallel, general, config, workerpool as w
 from openquake.hazardlib import valid
 from openquake.commonlib.oqvalidation import OqParam
-from openquake.commonlib import readinput
+from openquake.commonlib import readinput, logs, dbapi
 from openquake.calculators import base, export
-from openquake.commonlib import logs
+from openquake.server.dbserver import db
+
 
 USER = getpass.getuser()
 OQ_API = 'https://api.openquake.org'
