@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Disabling the DbServer with dbserver.host = local
   * Fixed `disagg_source` for same ID sources
   * Disambiguated same ID sources by appending the file name after
     the exclamation mark and fixed disagg_by_src accordingly
